src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__series_details_ui__series_details_ui_tests__tests__snapshot_tests__series_details_ui_SearchSeriesHistory_1.snap
---
source: src/ui/sonarr_ui/library/series_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Title: Test                                                                                                                                        │        
        │Overview: Blah blah blahIt was filmed in Madison, Wisconsin: a city the crew never really left.The first season took seven years to finish.        │        
        │Network: HBO                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: cool, family, fun                                                                                                                          │        
        │Rating: 84%                                                                                                                                        │        
        │Year: 2022                                                                                                                                         │        
        │Runtime: 63 minutes                                                                                                                                │        
        │Path: /nfs/tv/Test                                                                                                                                 │        
        │Quality Profile: Bluray-1080p                                                                                                                      │        
        │Language Profile: English                                                                                                                          │        
        │Monitored: Yes                                                                                                                                     │        
        │Size on Disk: 59.51 GB                                                                                                                             │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │╭  Series Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│        
        ││ Seasons │ History                                                                                                                               ││        
        ││─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────││        
        ││   Source Title ▼                                        Event Type            Language          Quality             Date                        ││        
        ││=> Test source                                           grabbed               English           Bluray-1080p        2024-02-10 07:28:45 UTC     ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                    ╭──────────────  Search  ───────────────╮                                                    ││        
        ││                                                    │series history search                  │                                                    ││        
        ││                                                    ╰───────────────────────────────────────╯                                                    ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
