src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__series_details_ui__series_details_ui_tests__tests__snapshot_tests__series_details_ui_SeriesHistoryDetails_1.snap
---
source: src/ui/sonarr_ui/library/series_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Title: Test                                                                                                                                        │        
        │Overview: Blah blah blah It was filmed in Madison, Wisconsin: a city the crew never really left. The first season took seven years to finish.      │        
        │Network: HBO                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: cool, family, fun                                                                                                                          │        
        │Rating: 84%                                                                                                                                        │        
        │Year: 2022                                                                                                                                         │        
        │Runtime: 63 minutes                                                                                                                                │        
        │Path: /nfs/tv/Test                                                                                                                                 │        
        │Quality Profile: Bluray-1080p                                                                                                                      │        
        │Language Profile: English                                                                                                                          │        
        │Monitored: Yes                                                                                                                                     │        
        │Size on Disk: 59.51 GB          ╭───────────────────────────────────  Details  ───────────────────────────────────╮                                │        
        │                                │Source Title: Test source                                                        │                                │        
        │                                │Event Type: grabbed                                                              │                                │        
        │                                │Indexer:                                                                         │                                │        
        │╭  Series Details  ─────────────│Release Group:                                                                   │───────────────────────────────╮│        
        ││ Seasons │ History             │Series Match Type:                                                               │                               ││        
        ││───────────────────────────────│NZB Info URL:                                                                    │───────────────────────────────││        
        ││   Source Title ▼              │Download Client Name:                                                            │   Date                        ││        
        ││=> Test source                 │Age: 0 days                                                                      │   2024-02-10 07:28:45 UTC     ││        
        ││                               │Published Date: 1970-01-01 00:00:00 UTC                                          │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               ╰─────────────────────────────────────────────────────────────────────────────────╯                               ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
